вёрстка блока новостей и статей

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -32,7 +32,7 @@
 
 
     <!-- СТИЛИ СТРАНИЦЫ -->
-    <link rel="stylesheet" href="../styles/pages/news.css">
+    <link rel="stylesheet" href="../styles/pages/blog.css">
 </head>
 
 <body>
@@ -226,7 +226,143 @@
                 <img src="./assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
 
-            <!-- ... -->
+            <section class="articles-list main__articles-list">
+                <div class="my-container articles-list__container">
+                    <div class="articles-list__sort-buttons">
+                        <div class="swiper articles-list__sort-button-swiper">
+                            <div class="swiper-wrapper articles-list__sort-buttons-swiper-wrapper">
+                                <div class="swiper-slide articles-list__sort-buttons-swiper-slide">
+                                    <button
+                                        class="my-button my-button_borderOval my-button_noColor articles-list__button active">все</button>
+                                </div>
+                                <div class="swiper-slide articles-list__sort-buttons-swiper-slide">
+                                    <button
+                                        class="my-button my-button_borderOval my-button_noColor articles-list__button">Реджио-подход</button>
+                                </div>
+                                <div class="swiper-slide articles-list__sort-buttons-swiper-slide">
+                                    <button
+                                        class="my-button my-button_borderOval my-button_noColor articles-list__button">Проекты</button>
+                                </div>
+                                <div class="swiper-slide articles-list__sort-buttons-swiper-slide">
+                                    <button class="my-button my-button_borderOval my-button_noColor articles-list__button">Разное</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="articles-list__items">
+                        <div class="articles-list__item-wrapper">
+                            <div class="articles-list__item-top">
+                                <div class="articles-list__item --big-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="articles-list__item-img">
+                                    <div class="articles-list__item-content">
+                                        <div class="my-button my-button_borderSquare articles-list__item-title">Образовательная программа вдохновение</div>
+                                        <div class="articles-list__item-text-content">
+                                            <div class="articles-list__item-date">01.01.2025</div>
+                                            <div class="articles-list__item-texts">
+                                                <div class="articles-list__item-text-title">Выпускной-2024</div>
+                                                <div class="articles-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare articles-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="articles-list__item --small-item --text-news">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="articles-list__item-img">
+                                    <div class="articles-list__item-content">
+                                        <div class="my-button my-button_borderSquare articles-list__item-title">занятия робототехникой</div>
+                                        <div class="articles-list__item-text-content">
+                                            <div class="articles-list__item-date">01.01.2025</div>
+                                            <div class="articles-list__item-texts">
+                                                <div class="articles-list__item-text-title">О реджио-подходе</div>
+                                                <div class="articles-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare articles-list__item-link">Читать
+                                                статью</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="articles-list__item --small-item --text-news_withImage">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="articles-list__item-img">
+                                    <div class="articles-list__item-content">
+                                        <div class="my-button my-button_borderSquare articles-list__item-title">пикник на острове юность</div>
+                                        <div class="articles-list__item-text-content">
+                                            <div class="articles-list__item-date">04.01.2025</div>
+                                            <div class="articles-list__item-texts">
+                                                <div class="articles-list__item-text-title">Проектное
+                                                    обучение</div>
+                                                <div class="articles-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare articles-list__item-link">Читать
+                                                статью</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="articles-list__item-bottom">
+                                <div class="articles-list__item --bottom-item --big-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="articles-list__item-img">
+                                    <div class="articles-list__item-content">
+                                        <div class="my-button my-button_borderSquare articles-list__item-title">о проектной деятельности</div>
+                                        <div class="articles-list__item-text-content">
+                                            <div class="articles-list__item-date">01.01.2025</div>
+                                            <div class="articles-list__item-texts">
+                                                <div class="articles-list__item-text-title">Выпускной-2024</div>
+                                                <div class="articles-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare articles-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="articles-list__item --bottom-item --small-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="articles-list__item-img">
+                                    <div class="articles-list__item-content">
+                                        <div class="my-button my-button_borderSquare articles-list__item-title">Заголовок Статьи</div>
+                                        <div class="articles-list__item-text-content">
+                                            <div class="articles-list__item-date">01.01.2025</div>
+                                            <div class="articles-list__item-texts">
+                                                <div class="articles-list__item-text-title">Выпускной-2024</div>
+                                                <div class="articles-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare articles-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="articles-list__item --bottom-item --small-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="articles-list__item-img">
+                                    <div class="articles-list__item-content">
+                                        <div class="my-button my-button_borderSquare articles-list__item-title">Заголовок Статьи</div>
+                                        <div class="articles-list__item-text-content">
+                                            <div class="articles-list__item-date">01.01.2025</div>
+                                            <div class="articles-list__item-texts">
+                                                <div class="articles-list__item-text-title">Выпускной-2024</div>
+                                                <div class="articles-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare articles-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="my-button my-button_borderSquare">Показать всё</button>
+                </div>
+            </section>
 
             <!-- ЕСЛИ feedback-block НАХОДИТЬСЯ ВНЕ КАКОЙ-ЛИБО СЕКЦИИ, ТО НАДО ЕГО ОБЕРНУТЬ ВНУТРЬ БЛОКА feedback, ЕСЛИ ОН ЧАСТЬ СЕКЦИИ (КАК НА ГЛАВЙНОЙ), ТАМ СВОЯ УНИКАЛЬНАЯ ОБЁРТКА -->
             <section class="feedback main__feedback">
@@ -361,6 +497,30 @@
     <script src="../assets/js/phone-mask.js"></script>
     <script src="../assets/js/header.js"></script>
     <script src="../assets/js/section-links.js"></script>
+
+
+        <!-- СКРИПТЫ СТРАНИЦЫ -->
+        <script>
+            const sortButtonsSwiper = new Swiper('.articles-list__sort-button-swiper', {
+                direction: 'horizontal',
+                slidesPerView: 'auto',
+                spaceBetween: 15,
+                freeMode: true, // Позволяет слайдам свободно прокручиваться
+                watchSlidesProgress: true, // Включает отслеживание прогресса слайдов
+                watchSlidesVisibility: true,
+                breakpoints: {
+                    651: {
+                        spaceBetween: 16,
+                    },
+                    991: {
+                        spaceBetween: 15,
+                    },
+                    1281: {
+                        spaceBetween: 16,
+                    }
+                }
+            });
+        </script>
 </body>
 
 </html>
