--- a/pages/news.html
+++ b/pages/news.html
@@ -232,7 +232,198 @@
                     class="hero-section__background-img">
             </section>
 
-            <!-- ... -->
+            <section class="news-list main__news-list">
+                <div class="my-container news-list__container">
+                    <div class="news-list__sort-buttons">
+                        <div class="swiper news-list__sort-button-swiper">
+                            <div class="swiper-wrapper news-list__sort-buttons-swiper-wrapper">
+                                <div class="swiper-slide news-list__sort-buttons-swiper-slide">
+                                    <button
+                                        class="my-button my-button_borderOval my-button_noColor news-list__button active">все</button>
+                                </div>
+                                <div class="swiper-slide news-list__sort-buttons-swiper-slide">
+                                    <button
+                                        class="my-button my-button_borderOval my-button_noColor news-list__button">праздники</button>
+                                </div>
+                                <div class="swiper-slide news-list__sort-buttons-swiper-slide">
+                                    <button
+                                        class="my-button my-button_borderOval my-button_noColor news-list__button">праздники</button>
+                                </div>
+                                <div class="swiper-slide news-list__sort-buttons-swiper-slide">
+                                    <button class="my-button my-button_borderOval my-button_noColor news-list__button">участие в
+                                        мероприятиях</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news-list__items">
+                        <div class="news-list__item-wrapper">
+                            <div class="news-list__item-top">
+                                <div class="news-list__item --big-item --video-poster">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">город профессий</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="news-list__item --small-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">занятия робототехникой</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="news-list__item --small-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">пикник на острове юность</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="news-list__item-bottom">
+                                <div class="news-list__item --bottom-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">выставка в&nbsp;филиале <br> на&nbsp;каландарашвили</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="news-list__item --bottom-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">час реджио</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="news-list__item --bottom-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">выставка в&nbsp;филиале <br> в&nbsp;солнечном</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="news-list__item-wrapper">
+                            <div class="news-list__item-top">
+                                <div class="news-list__item --big-item --text-news">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">провокации на
+                                            декабрьских событий</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="news-list__item --small-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">развивающие занятия</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="news-list__item --small-item">
+                                    <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt=""
+                                        class="news-list__item-img">
+                                    <div class="news-list__item-content">
+                                        <div class="my-button my-button_borderSquare news-list__item-title">провокации на декабрьских событий</div>
+                                        <div class="news-list__item-text-content">
+                                            <div class="news-list__item-date">01.01.2025</div>
+                                            <div class="news-list__item-texts">
+                                                <div class="news-list__item-text-title">Выпускной-2024</div>
+                                                <div class="news-list__item-text">Наборный текст</div>
+                                            </div>
+                                            <a href=""
+                                                class="my-button my-button_noColor my-button_borderSquare news-list__item-link">Читать
+                                                новость</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <!-- ЕСЛИ feedback-block НАХОДИТЬСЯ ВНЕ КАКОЙ-ЛИБО СЕКЦИИ, ТО НАДО ЕГО ОБЕРНУТЬ ВНУТРЬ БЛОКА feedback, ЕСЛИ ОН ЧАСТЬ СЕКЦИИ (КАК НА ГЛАВЙНОЙ), ТАМ СВОЯ УНИКАЛЬНАЯ ОБЁРТКА -->
             <section class="feedback main__feedback">
@@ -364,12 +555,36 @@
     <script src="../assets/libs/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../assets/libs/bootstrap/popper.min.js"></script>
     <script src="../assets/libs/fancybox/fancybox.umd.js"></script>
-
-
+    
+    
     <!-- ОБЩИЕ СКРИПТЫ -->
     <script src="../assets/js/phone-mask.js"></script>
     <script src="../assets/js/header.js"></script>
     <script src="../assets/js/section-links.js"></script>
-</body>
+
+
+    <!-- СКРИПТЫ СТРАНИЦЫ -->
+    <script>
+        const sortButtonsSwiper = new Swiper('.news-list__sort-button-swiper', {
+            direction: 'horizontal',
+            slidesPerView: 'auto',
+            spaceBetween: 15,
+            freeMode: true, // Позволяет слайдам свободно прокручиваться
+            watchSlidesProgress: true, // Включает отслеживание прогресса слайдов
+            watchSlidesVisibility: true,
+            breakpoints: {
+                651: {
+                    spaceBetween: 16,
+                },
+                991: {
+                    spaceBetween: 15,
+                },
+                1281: {
+                    spaceBetween: 16,
+                }
+            }
+        });
+    </script>
+    </body>
 
 </html>
